k8_developers/start/anchor/spring-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-deployment
spec:
  replicas: 4
  selector:
    matchLabels:
      app: springboot
  template:
    metadata:
      labels:
        app: springboot
    spec:
      containers:
        - name: springboot
          imagePullPolicy: Never
          image: demo/spring-boot
          ports:
            - containerPort: 8080
