k8_developers/start/anchor/spring-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-service
spec:
  type: NodePort
  selector:
    app: springboot
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30008
