k8_developers/start/anchor/spring-servicev2.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-servicev2
spec:
  type: NodePort
  selector:
    app: springboot-v2
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30009
